Update home style for big/small screen fix intro circle to overflow

--- a/src/shared.sass
+++ b/src/shared.sass
@@ -14,7 +14,20 @@ $geometric-font-stack: 'Century Gothic', 'Futura', sans-serif;
  */
 h1, h2, h3, h4, h5, h6
     margin: 0
-
+h1
+    font-size: 46px
+h2
+    font-size: 40px
+h3
+    font-size: 34px
+h4
+    font-size: 28px
+h5
+    font-size: 22px
+h6
+    font-size: 18px
+p
+    font-size: 16px
 
 
 /*
@@ -79,6 +92,8 @@ $easeInOutCubic: cubic-bezier(0.645, 0.045, 0.355, 1)
     transition: $transitionTimeFast $easeInOutCubic
 =homePageTransitionSlow
     transition: $transitionTimeSlow $easeInOutCubic
+=homePageTransitionLinear
+    transition: $transitionTimeSlow
 /*
   Generic, Strucutral Styling
  */
